# campaign-journal

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: TabBar.vue
src/components/calendar/: CalendarView.vue
src/components/journal/: FileTree.vue  JournalView.vue  NoteEditor.vue
src/components/settings/: SettingsView.vue
src/components/timeline/: TimelineView.vue
src/stores/: notes.ts  settings.ts
src/types/: index.ts
src/utils/: dateParser.ts  fileSystem.ts
