[package]
name = "campaign-journal"
version = "0.1.0"
description = "A Campaign Journal for TTRPG games"
authors = []
edition = "2021"

[lib]
name = "campaign_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
